@@ -312,8 +312,8 @@ class SkinsTool(UniqueObject, SkinsContainer, Folder, ActionProviderBase):
         mtool = getUtility(IMembershipTool)
         utool = getUtility(IURLTool)
         member = mtool.getAuthenticatedMember()
-        if hasattr(aq_base(member), 'portal_skin'):
-            mskin = member.portal_skin
+        if hasattr(aq_base(member), 'getProperty'):
+            mskin = member.getProperty('portal_skin', None)
             if mskin:
                 req = self.REQUEST
                 cookie = req.cookies.get(self.request_varname, None)
