@@ -12,7 +12,8 @@ rtool = getToolByInterfaceName('Products.CMFCore.interfaces.IRegistrationTool')
 try:
     rtool.addMember( id=member_id, password=password,
                      properties={'username': member_id,
-                                 'email': member_email} )
+                                 'email': member_email},
+                     REQUEST=context.REQUEST)
 except ValueError, errmsg:
     return context.setStatus(False, errmsg)
 else:
